k8s/overlays/openshift/postgresql-image.patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-retrogemini
spec:
  template:
    spec:
      containers:
        - name: container
          image: registry.redhat.io/rhel9/postgresql-15:latest
          volumeMounts:
            - name: retrogemini-postgresql-data
              mountPath: /var/lib/pgsql/data
