k8s/overlays/openshift/service.patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: retrogemini-service
spec:
  type: ClusterIP
