k8s/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: retrogemini-route
  labels:
    app: retrogemini
  annotations:
    openshift.io/host.generated: "true"
spec:
  to:
    kind: Service
    name: retrogemini-service
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
